--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -288,21 +288,21 @@
                                                             {{ numberWithCommas(item['price'])}}
                                                         </h5>
                                                         
-                                                        <span class="location" >
-                                                            <img src="../../../../assets/images/noun_Location_1911856@2x.png"
-                                                                alt="..." />
-                                                            {{lang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
-                                                        </span>
-
-                                                        <span class="sep-width"> </span>
-
-                                                        <span class="date">
-                                                            <img src="../../../../assets/images/date.png"
-                                                                alt="..." />
-                                                                {{ 'home.Recently Added.listed_on' | translate }}   
-
-                                                                {{ setDate(item['created_at']) }}
-                                                        </span>
+                                                        <div class="space-between">
+                                                            <span class="location" >
+                                                                <img src="../../../../assets/images/noun_Location_1911856@2x.png"
+                                                                    alt="..." />
+                                                                {{lang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
+                                                            </span>
+    
+                                                            <span class="date">
+                                                                <img src="../../../../assets/images/date.png"
+                                                                    alt="..." />
+                                                                    {{ 'home.Recently Added.listed_on' | translate }}   
+    
+                                                                    {{ setDate(item['created_at']) }}
+                                                            </span>
+                                                        </div>
 
                                                       
                                                     </div>
@@ -316,8 +316,8 @@
             
                                                 </div>
                                                 <div class="card-text">
-                                                    <div class="row">
-                                                        <div class="col-3 desc" *ngFor="let c of item['criteria'] | slice:0:4">
+                                                    <div class="space-between">
+                                                        <div class="desc" *ngFor="let c of item['criteria'] | slice:0:4">
                                                             <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
                                                             {{getCriteriaOptions(c)}}
                                                         </div>
