--- a/src/app/shared/components/search-result/search-result.component.html
+++ b/src/app/shared/components/search-result/search-result.component.html
@@ -184,26 +184,20 @@
                                                 {{ numberWithCommas(item['price'])}}
                                             </h5>
                                             
-                                            <div class="row">
+                                            <div class="space-between">
 
-                                                <div class="col-6">
-                                                    <span class="location">
-                                                        <img src="../../../../assets/images/noun_Location_1911856@2x.png"
-                                                            alt="..." />
-                                                        {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
-                                                    </span>
+                                                <span class="location">
+                                                    <img src="../../../../assets/images/noun_Location_1911856@2x.png"
+                                                        alt="..." />
+                                                    {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
+                                                </span>
 
-                                                </div>
-                                                
 
-                                                <div class="col-6">
-                                                    <span class="date">
-                                                        <img src="../../../../assets/images/date.png"
-                                                            alt="..." />
-                                                            {{ setDate(item['created_at']) }}
-                                                        </span>
-
-                                                </div>
+                                                <span class="date">
+                                                    <img src="../../../../assets/images/date.png"
+                                                        alt="..." />
+                                                        {{ setDate(item['created_at']) }}
+                                                </span>
 
                                             </div>
                                         </div>
@@ -217,8 +211,8 @@
 
                                     </div>
                                     <div class="card-text">
-                                        <div class="row">
-                                            <div class="col-3 desc" *ngFor="let c of item['criteria'] | slice:0:4">
+                                        <div class="space-between">
+                                            <div class="desc" *ngFor="let c of item['criteria'] | slice:0:4">
                                                 <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
                                                 {{getCriteriaOptions(c)}}
                                             </div>
