--- a/src/app/shared/components/set-priorites/set-priorites.component.scss
+++ b/src/app/shared/components/set-priorites/set-priorites.component.scss
@@ -83,7 +83,7 @@
                 max-width: 100%;
                 width: 100%;
                 color: #FD4965;
-                margin: 50px auto;
+                margin-top: 25%;
                 background-color: #f7e6e9;
             }
 
@@ -92,14 +92,15 @@
                 max-width: 100%;
                 width: 100%;
                 color: black;
-                margin: 50px auto;
+                margin-top: 25%;
                 background-color: #E6E6E6;
             }
 
             .box.notClicked{
+                background-color: #f7f7f7;
                 max-width: 170px;
                 height: 110px;
-                border: 1px solid #E7E7E7;
+                border: 1px solid #f7f7f7;
                 border-radius: 10px;
                 text-align: center;
                 margin: auto;
@@ -109,19 +110,25 @@
                     height: 95px;
                 }
 
+                .toggle{
+                    width: 22px;
+                    height: 22px;
+                    margin: 10px 10px 0px 10px
+                }
+
                 .icon {
                     display: inline-block;
-                    width: 40px;
-                    height: 40px;
+                    // width: 40px;
+                    // height: 40px;
                     vertical-align: text-bottom;
                     // margin-top: 15px;
                     background-color: #f7f7f7;
                     border-radius: 10px;
                     img {
                         display: inline-block;
-                        width: 30px;
+                        width: 45px;
 
-                        padding: 9px 5px;
+                        // padding: 9px 5px;
                     }
                     @media only screen and (min-width: 768px) and (max-width: 1350px) {
                         margin-top: 10px;
@@ -145,7 +152,7 @@
                 .insert {
                     display: flex;
                     justify-content: flex-end;
-                    margin: 0px 5px 0px 5px;
+                    margin-bottom: -5px;
                     fa-icon {
                         color: #cecece;
                     }
@@ -166,20 +173,27 @@
                     max-width: 114px;
                     height: 95px;
                 }
+
+                .toggle{
+                    width: 22px;
+                    height: 22px;
+                    margin: 10px 10px 0px 10px
+                }
+
 	
                 .icon {
                     display: inline-block;
-                    width: 40px;
-                    height: 40px;
+                    // width: 40px;
+                    // height: 40px;
                     vertical-align: text-bottom;
                     // margin-top: 15px;
                     background-color: #f7f7f7;
                     border-radius: 10px;
                     img {
                         display: inline-block;
-                        width: 30px;
+                        width: 45px;
 
-                        padding: 9px 5px;
+                        // padding: 9px 5px;
                     }
                     @media only screen and (min-width: 768px) and (max-width: 1350px) {
                         margin-top: 10px;
@@ -203,13 +217,89 @@
                 .delete {
                     display: flex;
                     justify-content: flex-end;
-                    margin: 0px 5px 0px 5px;
+                    margin-bottom: -5px;
+                    // margin: 0px 5px 0px 5px;
+                    fa-icon {
+                        // font-size: 12px;
+                    }
+                }
+            }
+
+            .box.preview{
+                max-width: 170px;
+                border: 1px solid #f7f7f7;
+				border-radius: 5px;
+                text-align: center;
+		        margin: auto;
+                background-color: #f7f7f7;
+                display: flex;
+                height: fit-content;
+                width: fit-content;
+                align-items: center;
+                padding: 0px 5px;
+
+				@media (max-width: 425px) {
+                    max-width: 114px;
+                }
+
+                .icon {
+                    display: inline-block;
+                    // margin: 5px;
+                    // width: 40px;
+                    // height: 40px;
+                    vertical-align: text-bottom;
+                    // margin-top: 15px;
+                    background-color: #f7f7f7;
+                    border-radius: 10px;
+                    img {
+                        display: inline-block;
+                        width: 45px;
+
+                        // padding: 9px 5px;
+                    }
+                    @media only screen and (min-width: 768px) and (max-width: 1350px) {
+                        margin-top: 10px;
+                    }
+                    
+                }
+                .text {
+                    margin: 5px;
+                    color: #a9a9a9;
+                    font-size: 13px;
+                    display: block;
+                    width: max-content;
+                    @media only screen and (min-width: 768px) and (max-width: 1440px) {
+                        font-size: 14px;
+                        //    display: block;
+                    }
+                    @media (max-width: 425px) {
+                        font-size: 14px;
+                    }
+                }
+
+                .delete {
+                    display: flex;
+                    justify-content: flex-end;
+                    margin-bottom: -5px;
+                    // margin: 0px 5px 0px 5px;
                     fa-icon {
                         // font-size: 12px;
                     }
                 }
             }
         }
+
+        .margin_all{
+            margin: 0% 4%;
+            display: flex;
+
+            .margin_item{
+                margin: 0% 1%;
+            }
+
+        }
+        
+
         // padding: 15px;
     }
     .priorites-control {
