--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -132,7 +132,9 @@
                     
                     <!-- <img class="avatar" src="{{setAvatarUrl()}}" alt="..." /> -->
                     <button ngbDropdownToggle  type="button" id="dropdownMenu2"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false"
+                        
+                        style="background-color: white;border: 0px;">
                         <!-- <img class="avatar" src="{{setAvatarUrl()}}" alt="..." /> -->
                         <!-- <span class="rt-icon">
                         <fa-icon [icon]="faEllipsisV"></fa-icon>
