--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -15,7 +15,7 @@
       <div class="col-xs-12 col-md-10 main-content">
         <div class="row">
           <div class="col-xs-12 col-xl-8 priorites-list">
-            <div class="col holder mt-3">
+            <div #holder class="col holder mt-3">
               <div class="row justify-content-center">
                 <div class="row head-section">
                   <p class="title-head col-6 float-start">{{'sell.Go to the best buyer' | translate}}</p>
@@ -115,7 +115,7 @@
                             <div class="regular" style="width: max-content;">
                               <!-- {{ print(item.name_en, item) }} -->
 
-                              <span class="before" style="background-color: #ffffff;">
+                              <span class="before">
                                 <img src="{{getIconUrl('1', item.name_en)}}" alt="...">
                               </span>
                               
@@ -153,7 +153,7 @@
                             <div [class.mb-4]="i < 5" class="col-4"
                               *ngFor='let item of getCurrentActiveForm("2");let i =index;'>
                               <div class="regular" style="width: max-content;">
-                                <span class="before" style="background-color: #ffffff;">
+                                <span class="before">
                                   <img src="{{getIconUrl('2', item.name_en)}}" alt="...">
                                 </span>
                                 
@@ -192,7 +192,7 @@
                               <div [class.mb-4]="i < 5" class="col-4"
                                 *ngFor='let item of getCurrentActiveForm("3");let i =index;'>
                                 <div class="regular" style="width: max-content;">
-                                  <span class="before" style="background-color: #ffffff;">
+                                  <span class="before">
                                     <img src="{{getIconUrl('3', item.name_en)}}" alt="...">
                                   </span>
                                   
@@ -232,7 +232,7 @@
                               *ngFor='let item of getCurrentActiveForm("4");let i =index;'>
                               <!-- {{item | json}} -->
                               <div class="regular"  style="width: max-content;" *ngIf="item.key !== 'Unit photos'">
-                                <span class="before"  style="background-color: #ffffff;">
+                                <span class="before">
                                   <img src="{{getIconUrl('4', item.name_en)}}" alt="...">
                                 </span>
                                 
@@ -257,16 +257,17 @@
                   </ng-template>
                 </ngb-panel>
               </ngb-accordion>
-              <div class="button">
-                <button (click)="back()" [disabled]="currentStep === 1"
-                  class="button btn button-success next-back sub-action">{{'button.actions.Back' | translate}}</button>
-                <button *ngIf="validateSubmit()" (click)="next()" [disabled]="validateNext()"
-                  class="button btn button-success">{{'button.actions.Next' | translate}} </button>
-                <button *ngIf="!validateSubmit()" [disabled]='validateSubmit()' class="btn button-success"
-                  (click)="doSearchQuery()">{{'button.actions.Review' | translate}}</button>
-              </div>
+              
             </div>
             
+            <div class="button">
+              <!-- <button (click)="back()" [disabled]="currentStep === 1"
+                class="button btn button-success next-back sub-action">{{'button.actions.Back' | translate}}</button> -->
+              <button *ngIf="validateSubmit()" (click)="scroll(holder); next();" [disabled]="validateNext()"
+                class="button btn button-success">{{'button.actions.Next' | translate}} </button>
+              <button *ngIf="!validateSubmit()" [disabled]='validateSubmit()' class="btn button-success"
+                (click)="doSearchQuery()">{{'button.actions.Review' | translate}}</button>
+            </div>
 
           </div>
           <div class="row d-block d-xl-none" style="min-height: 90px;">
