--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
@@ -356,6 +356,8 @@
         // padding: 15px;
     }
     .priorites-control {
+        display: flex !important;
+        flex-direction: column !important;
         background: #fff;
         border-radius: 20px;
         margin-top: 15px;
@@ -446,9 +448,9 @@
 
     .button {
         button {
-            width: 50%;
+            width: 100%;
             height: 50px;
-            margin: 40px 10px;
+            margin: 20px 0px;
             display: inline;
             border-radius: 10px;
             @media only screen and (min-width: 1200px) and (max-width: 1271px) {
