--- a/src/app/shared/components/single-property/single-property.component.html
+++ b/src/app/shared/components/single-property/single-property.component.html
@@ -54,6 +54,12 @@
                                     <img (click)="copyUrl()" src="../../../../assets/images/Path 161.svg" class="float-end" /> -->
                                 </div>
                             </div>
+
+                            <p class="title">
+                                {{ data?.title }}
+
+                            </p>
+
                             <div class="accuracy row" *ngIf="proerityType === 'buy' ">
                                 <div class="col-8">
                                     <p class="text-head">Results Accuracy</p>
@@ -69,25 +75,29 @@
                                 </div>
                             </div>
 
-                            <p class="title">
-                                {{renderString(data?.title)}}
-
-                        </p>
 
                             <p class="price">
                                 {{'propertyDetails.EGP' | translate}} {{numberWithCommas(data?.price ? data.price : '')}}
                             </p>
-                            <span class="location" style="color: #ABABB6;">
+                            <div class="location" style="color: #ABABB6;">
                                 <img width="22px" src="../../../../assets/images/noun_Location_1911856@2x.png" alt="..."/>
-                            {{ print(data) }}
+                                {{ print(data) }}
 
-                            {{ data?.compound_name_en ? (activeLang === 'en' ? data?.compound_name_en : data?.compound_name_ar): '' }}{{ data?.compound_name_en ? ', ' : '' }}
-                            {{ data?.neighborhood_name_en ? (activeLang === 'en' ? data?.neighborhood_name_en : data?.neighborhood_name_ar) : ' ' }}{{ data?.neighborhood_name_en ? ', ' : '' }}
-                            {{activeLang === 'en' ? data?.location_name_en : data?.location_name_ar}}, 
-                            {{activeLang === 'en' ? data?.area_name_en : data?.area_name_ar}}, 
-                            {{activeLang === 'en' ? data?.city_name_en : data?.city_name_ar}}
+                                {{ data?.compound_name_en ? (activeLang === 'en' ? data?.compound_name_en : data?.compound_name_ar): '' }}{{ data?.compound_name_en ? ', ' : '' }}
+                                {{ data?.neighborhood_name_en ? (activeLang === 'en' ? data?.neighborhood_name_en : data?.neighborhood_name_ar) : ' ' }}{{ data?.neighborhood_name_en ? ', ' : '' }}
+                                {{activeLang === 'en' ? data?.location_name_en : data?.location_name_ar}}, 
+                                {{activeLang === 'en' ? data?.area_name_en : data?.area_name_ar}}, 
+                                {{activeLang === 'en' ? data?.city_name_en : data?.city_name_ar}}
                             
-                            </span>
+                            </div>
+
+                            <div class="unit_code">
+                                <img width="22px" src="../../../../assets/images/unit_code.png" alt="..."/>
+                                
+                                {{activeLang === 'en' ? 'Unit Code' : 'كود الوحدة' }}: #{{ data?.code }} 
+
+                            </div>
+
                             <div style="color:#5A8DEE">
                                 <p style="padding:10px 20px">
                                     {{data?.status}}
@@ -112,13 +122,16 @@
                 </div>
 
             </div>
-            <div class="row details mt-5 mb-5">
-                <div class="col-sm-12 col-lg-8">
+            <div class="row details mt-5 mb-5 col-lg-8">
+                <div class="col-sm-12">
                     <p class="title">{{'propertyDetails.Details' | translate}}</p>
-                    <p class="desc">
+                    <!-- <p class="desc">
                         {{renderString(data?.description)}}
+                    </p> -->
 
-                    </p>
+                    {{renderString(data?.description)}}
+                    <div class="desc" id="description"></div>
+
                 </div>
                 <div class="col-12 more-details">
                     <div class="row justify-content-center"
