--- a/src/unit-details.scss
+++ b/src/unit-details.scss
@@ -98,7 +98,7 @@
             }
             background-color: #fff;
             border-radius: 10px;
-            height: 500px;
+            min-height: 500px;
             padding: 15px;
             @media (max-width: 768px) {
                 margin-top: 25px;
@@ -108,8 +108,8 @@
                 background-color: #f7f7f7;
                 border-radius: 5px;
                 margin: 5px;
-                padding: 10px;
-                margin-top: 20px;
+                padding: 5px;
+                // margin-top: 20px;
                 .text-head {
                     font-family: "Rubik-bold";
                     font-size: 20px;
@@ -142,15 +142,15 @@
                 }
             }
             .head {
-                margin-top: 20px;
+                margin-top: 10px;
                 img {
-                    padding: 15px;
+                    padding: 5px;
                     background-color: #f7f7f7;
                     margin: 0px 5px;
                     border-radius: 10px;
                     cursor: pointer;
-                    width: 65px;
-                    height: 62px;
+                    width: 35px;
+                    height: 30px;
                     @media only screen and (min-width: 1024px) and (max-width: 1350px) {
                         width: 43px;
                         height: 42px;
@@ -175,8 +175,9 @@
 
             .price {
                 font-family: "Rubik-bold";
-                font-size: 35px;
+                font-size: 27px;
                 padding: 5px;
+                margin: 0px;
                 @media only screen and (min-width: 1024px) and (max-width: 1350px) {
                     font-size: 25px;
                     margin-top: 16px;
@@ -184,6 +185,13 @@
             }
             .location {
                 margin: 5px;
+                img {
+                    width: 20px;
+                    height: 28px;
+                }
+            }
+            .unit_code {
+                margin: 10px 5px;
                 img {
                     width: 20px;
                     height: 28px;
@@ -207,7 +215,9 @@
             }
         }
 
+
         .details {
+            margin-top: 20px !important;
             background-color: #fff;
             border-radius: 20px;
             padding: 15px;
@@ -220,6 +230,10 @@
                 color: #ababb6;
                 font-size: 16px;
                 font-family: "Rubik-Regular";
+
+                li{
+                    list-style: disc;
+                }
             }
             .more-details {
                 .head {
