--- a/src/app/components/buyer/unit-details/unit-details.component.html
+++ b/src/app/components/buyer/unit-details/unit-details.component.html
@@ -121,8 +121,8 @@
 
             </div>
             <!--buy-->
-            <div class="row details mt-5 mb-5 col-lg-8">
-                <div class="col-sm-12">
+            <div class="row details mt-5 mb-5">
+                <div class="col-sm-12 col-lg-8">
                     <p class="title"> {{'propertyDetails.Details' | translate}}</p>
                     <div id="description" class="desc">
                         {{renderString(propertyDetails.description)}}
