--- a/src/app/shared/components/single-property/single-property.component.html
+++ b/src/app/shared/components/single-property/single-property.component.html
@@ -122,8 +122,8 @@
                 </div>
 
             </div>
-            <div class="row details mt-5 mb-5 col-lg-8">
-                <div class="col-sm-12">
+            <div class="row details mt-5 mb-5">
+                <div class="col-sm-12 col-lg-8">
                     <p class="title">{{'propertyDetails.Details' | translate}}</p>
                     <!-- <p class="desc">
                         {{renderString(data?.description)}}
