--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.html
@@ -17,12 +17,23 @@
           <div class="col-xs-12 col-xl-8 priorites-list">
             <div #holder class="col holder mt-3">
               <div class="row justify-content-center">
-                <div class="row head-section">
-                  <p class="title-head col-6 float-start">{{'sell.Go to the best buyer' | translate}}</p>
-                  <p class=" title-head col-6">
-                    <span class="float-end">{{'sell.Step' | translate}} 1/4</span>
-                  </p>
-                  <div class="progress-bars col-12">
+                <div class="head-section">
+
+                  <div style="display: flex; justify-content: space-between">
+                    <div style="display: flex">
+                      <p class="title-head">{{'sell.Go to the best buyer' | translate}}</p>
+                  
+                      <p class="required">*{{'sell.Required' | translate}}</p>
+
+                    </div>
+                  
+                    <p class="title-head">
+                      <span>{{'sell.Step' | translate}} 1/4</span>
+                    </p>
+
+                  </div>
+
+                  <div class="progress-bars">
                     <div class="row">
                       <div class="col d-none d-lg-block" [class.active-sm]="currentStep === 1">
                         <span class="man-icon" [class.active]="currentStep === 1">
@@ -263,10 +274,13 @@
             <div class="button">
               <!-- <button (click)="back()" [disabled]="currentStep === 1"
                 class="button btn button-success next-back sub-action">{{'button.actions.Back' | translate}}</button> -->
-              <button *ngIf="validateSubmit()" (click)="scroll(holder); next();" [disabled]="validateNext()"
+                <!-- [disabled]="validateNext()" -->
+              
+                <button *ngIf="validateSubmit()" (click)="scroll(holder); next();" 
                 class="button btn button-success">{{'button.actions.Next' | translate}} </button>
-              <button *ngIf="!validateSubmit()" [disabled]='validateSubmit()' class="btn button-success"
-                (click)="doSearchQuery()">{{'button.actions.Review' | translate}}</button>
+                <!-- [disabled]='validateSubmit()' -->
+              <button *ngIf="!validateSubmit()" class="btn button-success"
+                (click)="review()">{{'button.actions.Review' | translate}}</button>
             </div>
 
           </div>
