--- a/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
+++ b/src/app/components/seller/setup-seller-priorities/setup-seller-priorities.component.scss
@@ -489,6 +489,23 @@
                  font-family: 'Rubik-bold';
              }
          }
+
+         .required{
+            color: red !important;
+            font-size: 13px !important;
+            padding-top: 3px !important;
+            padding-left: 10px;
+            padding-right: 10px;
+
+            @media (max-width: 425px) {
+                padding-top: 5px !important;
+                font-size: 10px !important;
+                padding-left: 5px;
+                padding-right: 5px;
+            }
+
+
+         }
         //  .col-image {
         //     // @media (max-width: 786px) {
         //     //     display: none;
