--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -48,9 +48,10 @@
                 font: normal normal bold Rubik;
                 @media (max-width: 768px) {
                     color: #fff;
+                    text-align: initial;
                 }
                 @media (min-width: 768px) {
-                    font-size: calc(1.375rem + 3.1vw);
+                    font-size: calc(1.075rem + 2.5vw);
                     padding-top: 4%;
                 }
                 @media (max-width: 1024px) {
@@ -58,24 +59,59 @@
                     padding-top: 4%;
                 }
                 @media (max-width: 768px) {
-                    font-size: calc(1.375rem + 2vw);
+                    font-size: calc(1.375rem + 2.5vw);
                 }
                 @media only screen and (min-width: 1025px) and (max-width: 1385px) {
-                    font-size: calc(1.375rem + 3vw);
+                    font-size: calc(1.075rem + 2.5vw);
                 }
             }
-            p {
+            .save{
                 font: normal normal normal Rubik;
                 letter-spacing: 0px;
                 color: #184d47;
                 @media (min-width: 768px) {
-                    font-size: calc(1.375rem + 0.5vw);
+                    // font-size: calc(1.375rem + 0.5vw);
+                    font-size: calc(1.25rem + .25vw);
                     // color: #fff;
                 }
                 @media (max-width: 768px) {
                     color: #fff;
+                    text-align: start;
                 }
             }
+
+            .stats{
+                display: flex;
+                justify-content: space-between;
+                margin: 1% 0% 1% 0%;
+            
+                .center{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .count{
+                        color: #fd4965;
+                        margin-bottom: 0%;
+                        font-size: calc(1.25rem + .25vw);
+    
+                        @media (max-width:425px) {
+                            font-size: calc(1.25rem + -1.05vw);
+                        }
+                    }
+                    .title{
+                        font-size: calc(1rem + 0.05vw);
+                        margin-top: 0%;
+                        
+                        @media (max-width:425px) {
+                            font-size: calc(1rem + -1.05vw);
+                            color: white;
+                        }
+                    }
+                }
+                
+            }
+
             .actions {
                 @media (max-width: 768px) {
                     // padding: 50px 10px;
@@ -90,6 +126,8 @@
                 }
                 @media (max-width:425px) {
                     // margin-top: 25px;
+                    margin-top: 0%;
+                    padding: 15px;
                 }
                 background-color: #f7f7f7;
                 border-radius: 10px 10px 0px 0px;
@@ -227,6 +265,7 @@
             @media (max-width: 425px) {
                 background-size: contain;
                 min-height: 315px;
+                filter: brightness(0.6);
             }
             .overlay {
                 cursor: auto;
@@ -265,7 +304,7 @@
                 box-shadow: none;
             }
             @media (max-width: 425px) {
-                padding: 11px;
+                padding: 0px 11px;
                 width: 94.7%;
                 margin-left: 2.7%;
             }
@@ -309,13 +348,26 @@
 
                         @media (max-width: 425px) {
                             margin-top: 25px;
+                            // margin: 0;
 						}
 
-                        .multiselect{
-                            // width: 20%;
-                            
+                        .checkbox{
+                            @media (max-width: 425px) {
+                                width: 7%;
+                            }
+                        }
+
+                        .dropdown{
                             @media (max-width: 425px) {
                                 width: 100%;
+                                margin: 0% 1%;
+                            }
+                            .multiselect{
+                                // width: 20%;
+                                
+                                @media (max-width: 425px) {
+                                    width: 100%;
+                                }
                             }
                         }
 
@@ -423,6 +475,19 @@
                             margin-top: 0;
                             @media (max-width: 425px) {
                                 margin-top: 25px;
+
+                            }
+                            .dropdown{
+                                @media (max-width: 425px) {
+                                    width: 100%;
+                                    margin: 0% 1%;
+                                }
+                            }
+
+                            .checkbox{
+                                @media (max-width: 425px) {
+                                    width: 7%;
+                                }
                             }
 
                         }
@@ -715,6 +780,10 @@
                 }
                 &.submit_buttons{
                     // min-width: 20%;
+
+                    .continueBtn{
+                        min-width: 100%;
+                    }
                     width: auto;
                     @media (min-width:1170px) and (max-width:1610px)  {
                         display: flex;
@@ -736,15 +805,13 @@
                             min-width: fit-content;
                             width: 100%;
                         }
-                        .continueBtn{
-                            min-width: 100%;
-                        }
+                        
                     }
                     // @media (min-width:769px) and (max-width:1169px){
                     @media (max-width:1169px){
                         min-width: 100%;
                         max-width: 100%;
-                        margin-top: 0;
+                        margin-top: 15px;
                         margin-bottom: 15px;
                         .applyBtn{
                            width: calc(50% - 15px);
@@ -777,7 +844,7 @@
                             margin-right: 0;
                         }
                         .applyBtn{
-                            width: calc(50% - 7px);
+                            width: 100%;
                             min-width: fit-content;
                          }
                     }
@@ -792,12 +859,42 @@
                     li:hover {
                         background-color: rgb(231, 231, 228);
                     }
+
+                    input{
+                        width: inherit; 
+                        padding: 1% 5% 1% 5%; 
+                        border-radius: 10px; 
+                        border: 1px solid #cabcbc;
+
+                        @media (max-width: 425px) {
+                            padding: 1% 5% 1% 10%; 
+                        }
+                    }
+
+                    fa-icon{
+                        position: absolute; 
+                        left: 1.5%; 
+                        right: 1.5%; 
+                        top: 25%; 
+                        width: fit-content;
+
+                        @media (max-width: 425px) {
+                            left: 3%;
+                            top: 15%; 
+                        }
+                    }
+
                 }
             }
         }
     }
     .recently-added {
         padding: 50px 0;
+
+        @media (max-width: 425px) {
+            padding: 0;
+        }
+
         background-color: #f7f7f7;
         .back-img {
             min-height: 175px;
@@ -1040,6 +1137,11 @@
     .how-it-works {
         background-color: #f7f7f7;
         padding: 50px 0;
+
+        // @media (max-width: 425px) {
+        //     padding: 0;
+        // }
+
         .card {
             text-align: center;
             border: none;
@@ -1071,6 +1173,12 @@
         }
     }
     .download-app {
+        display: flex;
+        padding: 8% 6% 10% 6%;
+
+        @media (max-width: 425px) {
+            flex-direction: column-reverse;
+        }
         .row,
         .col-xs-12 {
             margin: 0px;
@@ -1083,15 +1191,18 @@
             }
         }
         background-color: #f7f7f7;
-        padding: 200px 0px;
+        // padding: 200px 0px;
         @media (max-width: 1024px) {
-            padding: 60px 0px;
+            padding-top: 60px;
         }
         @media (max-width: 768px) {
             padding: 750x 0px;
         }
         .left-sec {
             .downlaod {
+                display: flex;
+                justify-content: center;
+
                 img {
                     width: 220px;
                     @media (max-width: 1024px) {
@@ -1107,58 +1218,101 @@
                 }
             }
         }
-        .holder {
-            height: 80%;
-            overflow: visible;
-            position: relative;
-            background: transparent linear-gradient(180deg, rgba(253, 73, 101, 1) 0%, rgba(253, 115, 99, 1) 100%) 0% 0%
-                no-repeat padding-box;
-            @media (max-width: 768px) {
-                height: 50%;
-            }
-            .iphone {
-                height: 720px;
-                position: absolute;
-                right: 5%;
-                top: -52%;
-                @media (max-width: 1440px) {
-                    height: 615px;
-                }
-                @media (max-width: 425px) {
-                    height: 365px !important;
-                }
-                @media (max-width: 320px) {
-                    height: 300px !important;
-                }
 
-                @media only screen and (min-width: 768px) and (max-width: 1024px) {
-                    height: 509px;
-                    top: -21%;
-                }
-                @media (max-width: 768px) {
-                    position: relative;
-                    height: 440px;
-                    top: -35% !important;
-                    left: 36%;
-                }
+        .iphone {
+            height: 720px;
+            position: absolute;
+            right: 5%;
+            top: -52%;
+            @media (max-width: 1440px) {
+                height: 615px;
             }
-            .iphone-sm {
-                position: absolute;
-                right: 43%;
-                top: 14%;
-                width: 215px;
-                @media (max-width: 1440px) {
-                    width: 163px;
-                }
+            @media (max-width: 425px) {
+                height: 365px !important;
+            }
+            @media (max-width: 320px) {
+                height: 300px !important;
+            }
+
+            @media only screen and (min-width: 768px) and (max-width: 1024px) {
+                height: 509px;
+                top: -21%;
+            }
+            @media (max-width: 768px) {
+                position: relative;
+                height: 440px;
+                top: -35% !important;
+                left: 36%;
+            }
+        }
+
+        .description{
+            margin-bottom: 120px;
+
+            @media (max-width: 425px) {
+                margin-bottom: 35px;
+            }
+        }
+
+        .app{
+
+            @media (max-width: 425px) {
+                margin-bottom: -20%;
+            }
+
+            .holder {
+                height: 80%;
+                overflow: visible;
+                position: relative;
+                background: transparent linear-gradient(180deg, rgba(253, 73, 101, 1) 0%, rgba(253, 115, 99, 1) 100%) 0% 0%
+                    no-repeat padding-box;
                 @media (max-width: 768px) {
-                    width: 138px;
-                    top: 10%;
+                    height: 50%;
                 }
-                @media (max-width: 425px) {
-                    width: 114px;
+                .iphone {
+                    height: 720px;
+                    position: absolute;
+                    right: 5%;
+                    top: -52%;
+                    @media (max-width: 1440px) {
+                        height: 615px;
+                    }
+                    @media (max-width: 425px) {
+                        height: 365px !important;
+                    }
+                    @media (max-width: 320px) {
+                        height: 300px !important;
+                    }
+
+                    @media only screen and (min-width: 768px) and (max-width: 1024px) {
+                        height: 509px;
+                        top: -21%;
+                    }
+                    @media (max-width: 768px) {
+                        position: relative;
+                        height: 440px;
+                        top: -35% !important;
+                        left: 36%;
+                    }
                 }
-                @media (max-width: 320px) {
-                    width: 94px;
+                .iphone-sm {
+                    position: absolute;
+                    right: 43%;
+                    top: 14%;
+                    width: 215px;
+                    @media (max-width: 1440px) {
+                        width: 163px;
+                    }
+                    @media (max-width: 768px) {
+                        width: 138px;
+                        top: 10%;
+                    }
+                    @media (max-width: 425px) {
+                        width: 114px;
+                    }
+                    @media (max-width: 320px) {
+                        width: 94px;
+                    }
                 }
             }
         }
@@ -1166,6 +1320,12 @@
     .about-alaqaar {
         background: #f7f7f7;
         .main-row {
+            margin-top: 50px;
+
+            @media (max-width: 425px) {
+                margin-top: 0px;
+            }
+
             padding: 20px 0px;
             background-color: #f1f2f2;
             border-radius: 0px 70px 0px 0px;
@@ -1189,6 +1349,14 @@
     }
 
     .alaqaar-blogs{
+        padding: 50px 0;
+        background-color: #f7f7f7;
+
+        @media (max-width: 425px) {
+            padding: 30px 0;
+
+        }
+
         .card-body{
             flex: 1 1 auto;
             padding: 1rem 1rem 0 1rem;
