--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,10 +66,11 @@ h2 {
     border: none !important;
 
     @media (max-width: 768px) {
+        height: 35px;
         border-radius: 10px !important;
         padding: 10px;
-        border: 1px solid #e7e7e7 !important;
-        min-height: 55px !important;
+        border: 1px solid #c9cbce !important;
+        // min-height: 55px !important;
         width: 100% !important;
     }
 }
@@ -101,6 +102,10 @@ h2 {
     text-align: center;
     // padding-top: 100px;
     padding-bottom: 40px;
+
+    @media (max-width: 425px) {
+        padding-bottom: 0px;
+    }
 
     span {
         width: 87px;
@@ -666,11 +671,23 @@ nz-progress {
 
 .priceRange {
     .dropdown-toggle:after {
+        display: inline-block;
+        margin-left: 0.255em;
+        vertical-align: 0.255em;
+        content: "";
+        border-top: 0.4em solid;
+        border-right: 0.4em solid transparent;
+        border-bottom: 0;
+        border-left: 0.4em solid transparent;
+        color: #b9b8b8;
+
         @media (max-width: 768px) {
             position: absolute;
-            right: 10px;
-            top: 15px;
+            right: 3%;
+            top: 50%;
         }
+
+
     }
 }
 
@@ -744,12 +761,6 @@ nz-progress {
     display: none;
 }
 
-.alaqaar-blogs{
-    padding: 50px 0;
-    background-color: #f7f7f7;
-
-    
-}
 .main-title {
     font-family: 'Rubik-Bold';
     font-size: 25px;
@@ -812,6 +823,11 @@ nz-progress {
 .alaqaar-solution{
     background: #f7f7f7;
     padding-top: 100px;
+
+    @media (max-width:425px){
+        padding-top: 30px;
+    }
+
     position: relative;
     .button-success{
         margin-top: 25px;
@@ -826,6 +842,12 @@ nz-progress {
         border-top-right-radius: 60px;
         left: 0;
         
+    }
+
+    .responsive{
+        @media (max-width:425px){
+            padding: 0px !important;
+        }
     }
 }
 
@@ -970,30 +992,36 @@ a{
 
 .dropdown-list{
     width: max-content !important;
+
+    @media (max-width:425px) {
+        width: 90% !important;
+    }
 }
 
 
 
 
-.home .first-sec .home-controls{
-    .stats{
-        width: 22% !important;
+// .home .first-sec .home-controls{
+    // .stats{
+    //     width: 22% !important;
     
-        .count{
-            color: #fd4965 !important;
-            margin-bottom: 0% !important;
-        }
-        .title{
-            font-size: calc(1rem + 0.05vw) !important;
-            margin-top: 0% !important;
-        }
-    }
+    //     .count{
+    //         color: #fd4965 !important;
+    //         margin-bottom: 0% !important;
+    //     }
+    //     .title{
+    //         font-size: calc(1rem + 0.05vw) !important;
+    //         margin-top: 0% !important;
+    //     }
+    // }
 
-    p{
-        font-size: calc(1.25rem + 0.25vw) !important;
-        //margin-top: 20px !important;
-    }
-}
+//     // p{
+//     //     font-size: calc(1.25rem + 0.25vw) !important;
+//     //     //margin-top: 20px !important;
+//     // }
+
+
+// }
 
 // buy, rent, sell, rental components
 .home .first-sec .search-sec .ngSelect.priceRange{
@@ -1203,4 +1231,8 @@ span.dropdown-multiselect--active{
 
 .fit-content{
     min-width: fit-content;
+}
+
+.required{
+    color: red;
 }
