--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1353,7 +1353,7 @@
         background-color: #f7f7f7;
 
         @media (max-width: 425px) {
-            padding: 30px 0;
+            padding: 30px 0px 0px 0px;
 
         }
 
